# bare-kit

./: .gitignore  overrides.cmake
apple/: CMakeLists.txt
shared/: CMakeLists.txt
test/apple/: CMakeLists.txt
